[project]
name = "add_ascertainment"
version = "0.0.1"
description = "Add Ascertainment Characters to Nexus File"
authors = [
    {name = "Simon J. Greenhill", email = "simon@simon.net.nz"}
]
homepage = "https://github.com/SimonGreenhill/add_ascertainment"
repository = "https://github.com/SimonGreenhill/add_ascertainment"
documentation = "https://github.com/SimonGreenhill/add_ascertainment"
readme = "README.md"
license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.13"
dependencies = [
    "python-nexus>=2.9.0",
]

[project.scripts]
add_ascertainment = "add_ascertainment.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["add_ascertainment"]

[tool.hatch.build.targets.sdist]
packages = ["add_ascertainment"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

